# shiwake

./: .gitignore  CLAUDE.md  claude-code-discord-setup.md  discord-notification.ts  index.html  package.json  pnpm-lock.yaml  spec.md  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
src/: App.tsx  index.css  main.tsx
src/components/: PhotoGallery.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx  toaster.tsx
src/hooks/: useFileSystemAccess.ts
src/test/: setup.ts
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
