[package]
name = "photo_sort_core"
version = "1.0.0"
authors = ["Photo Sort Contributors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Blob",
  "File",
  "FileReader",
  "Url",
  "Worker",
  "MessageEvent",
  "DedicatedWorkerGlobalScope",
] }

# 画像処理
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# SIMD対応
# rawler = { version = "0.3", features = ["dng"] }

# エラーハンドリング
console_error_panic_hook = { version = "0.1", optional = true }

# 高速化
rayon = "1.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[package.metadata.wasm-pack]
"wasm-opt" = ["-O4", "--enable-simd"]